# exact-real

./: .appveyor.yml  .codespellrc  .gitignore  .gitmodules  .zenodo.json  AUTHORS  ChangeLog  Makefile.am  README.conda.md  README.md  TODO  asv.conf.json  benchmarks.json  configure.ac  pixi.toml  rever.xsh
.azure-pipelines/: azure-pipelines-linux.yml  build_steps.sh  run_docker_build.sh
.ci_support/: conda_build.3979.patch  linux_.yaml  linux_benchmark.yaml  linux_build_flavour.yaml  linux_build_flavour_benchmark_python_36_target_exactreal.yaml  linux_build_flavourcoverage.yaml  osx_.yaml  (+32 more)
doc/: Makefile.am  configure.ac  environment.yml
doc/binder/: Sample.pyexactreal.ipynb
doc/manual/: .gitignore  Doxyfile  Makefile.am  README.md  conf.py  cxx_arb.rst  cxx_overview.rst  cxx_real_number.rst  cxx_seed.rst  index.rst  python_cppyy_exactreal.rst  python_overview.rst  sage_exact_reals.rst  sage_overview.rst
doc/manual/libexactreal/: index.md  mkdocs.yml.in  overview.md
doc/manual/pyexactreal/: conf.py  index.rst
doc/news/: TEMPLATE.rst  arb-from-gmp.rst  asv.rst  bool.rst  breathe.rst  canonicalize.rst  cereal131.rst  codecovyml.rst  coefficients.rst  division_t.rst  doc.rst  eantic100rc15.rst  flint23.rst  forbid-div.rst  integer-div.rst  is_square.rst  logic-error.rst  mp_apply.rst  no-enable-if.rst  no-gmpxxyy.rst  noassert.rst  non-shared-factory.rst  optdoc.rst  pixi.rst  real-number-product.rst  relational.rst  renfxx-serialization.rst  silicon.rst  square.rst  unique-exact-reals.rst  unique-factory-010.rst  version-script.rst  zenodo.rst  zz.rst
libexactreal/: .gitignore  configure.ac  environment-flint2.yml  environment.yml
libexactreal/asv/: __init__.py
libexactreal/benchmark/: .gitignore  Makefile.am  arb.benchmark.cc  element.benchmark.cc  main.cc  random_real_number.benchmark.cc
libexactreal/exact-real/: .gitignore  arb.hpp  arf.hpp  cereal.hpp  cereal.interface.hpp  cppyy.hpp  element.hpp  exact-real.hpp  exact-real.hpp.in  forward.hpp  integer_ring.hpp  local.hpp.in  module.hpp  number_field.hpp  number_field_ideal.hpp  rational_field.hpp  real_number.hpp  seed.hpp
libexactreal/exact-real/detail/: smart_ostream.hpp
libexactreal/exact-real/yap/: README.md  arb.hpp  arb_assign_transformation.hpp  arb_expr.hpp  arf.hpp  arf_assign_transformation.hpp  arf_expr.hpp  assign_transformation.hpp  forward.hpp  params_transformation.hpp  prec_expr.hpp  prec_transformation.hpp  round_expr.hpp  round_transformation.hpp  terminal.hpp
libexactreal/recipe/: build.sh  conda_build_config.yaml  meta.yaml
libexactreal/src/: Makefile.am  arb.cc  arf.cc  constrained_random_real_number.cc  constraint_random_real_number.cc  cppyy.cc  element.cc  integer_ring.cc  integer_ring_traits.cc  libexactreal.map  module.cc  number_field.cc  number_field_traits.cc  random_real_number.cc  rational_field.cc  rational_field_traits.cc  rational_real_number.cc  real_number.cc  real_number_base.cc  real_number_product.cc  seed.cc
libexactreal/src/exact-real/: arb.hpp  arf.hpp  cereal.hpp  cppyy.hpp  element.hpp  forward.hpp  integer_ring.hpp  integer_ring_traits.hpp  module.hpp  number_field.hpp  number_field_ideal.hpp  number_field_ideal_traits.hpp  rational_field.hpp  real_number.hpp
libexactreal/src/exact-real/detail/: unique_factory.hpp
libexactreal/src/exact-real/yap/: arb_assign_transformation.hpp  arb_expr.hpp  arf_assign_transformation.hpp  arf_expr.hpp  prec_transformation.hpp
libexactreal/src/impl/: real_number_base.hpp
libexactreal/src/legacy/: README.md
libexactreal/src/legacy/1_4_0/: element.cc  element.hpp
libexactreal/src/util/: assert.ipp  integer.ipp
libexactreal/test/: .gitignore  ABI.dump  ABI2.dump  Makefile.am  arb.benchmark.cc  arb.hpp  arb.test.cc  arb.yap.test.cc  arf.hpp  arf.test.cc  arf.test.hpp  arf.yap.test.cc  cereal.test.cc  constraint_random_real_number.test.cc  cppyy.test.cc  element.test.cc  element_generator.hpp  main.cc  module.test.cc  module_generator.hpp  random_real_number.test.cc  rational_real_number.test.cc  real_number_product.test.cc  rings.hpp
libexactreal/test/byexample/: .gitignore  Makefile.am  manual-doctest.sh.in  test-env.sh.in
libexactreal/test/byexample/extensions/: cxx.py
libexactreal/test/legacy/1_4_0/: element.test.cc
pyexactreal/src/: .gitignore  MANIFEST.in  MANIFEST.in.in  Makefile.am  setup.py  setup.py.in
pyexactreal/src/pyexactreal/: __init__.py  cppyy_exactreal.py  exact_reals.py
pyexactreal/src/pyexactreal/include/: cereal
pyexactreal/test/: .gitignore  Makefile.am  arb.py  arf.py  binder.py  element.py  module.py  python-doctest.sh  python-doctest.sh.in  real_number.py  sage-doctest.sh  sage-doctest.sh.in  test-env.sh.in
pyexactreal/test/disable-pytest/: pytest.py
src/libexactreal/: Makefile.am  arb.cc  arf.cc  constraint_random_real_number.cc  cppyy.cc  element.cc  integer_ring.cc  module.cc  number_field.cc  number_field_traits.cc  random_real_number.cc  rational_field.cc  rational_field_traits.cc  rational_real_number.cc  real_number.cc  real_number_product.cc
src/libexactreal/exact-real/: .gitignore  arb.hpp  arf.hpp  cppyy.hpp  element.hpp  exact-real.hpp  exact-real.hpp.in  forward.hpp  integer_ring.hpp  integer_ring_traits.hpp  module.hpp  number_field.hpp  number_field_ideal.hpp  number_field_ideal_traits.hpp  number_field_traits.hpp  rational_field.hpp  rational_field_traits.hpp  real_number.hpp  ring.hpp  ring_traits.hpp
src/libexactreal/exact-real/detail/: smart_less.hpp  smart_ostream.hpp  unique_factory.hpp
src/libexactreal/exact-real/yap/: README.md  arb.hpp  arb_assign_transformation.hpp  arb_expr.hpp  arf.hpp  arf_assign_transformation.hpp  arf_expr.hpp  assign_transformation.hpp  forward.hpp  params_transformation.hpp  prec_expr.hpp  round_expr.hpp  round_transformation.hpp  terminal.hpp
test/libexactreal/: .gitignore  Makefile.am  arb.benchmark.cc  arb.hpp  arb.test.cc  arf.hpp  arf.test.cc  arf.test.hpp  arf.yap.test.cc  constraint_random_real_number.test.cc  element.test.cc  main.hpp  module.test.cc  random_real_number.test.cc  rational_real_number.test.cc
(+283 files in other folders)
